[20020416]
* scrolling downward over the lowest filled line fails. fixed.
* arabic combined characters are processed as the one which occupies one
  column, not two.
* -J/--dyncomb, use_dynamic_comb option is added.
* "-- INSERT (lang) --" message can be shown in a strange line on vim. fixed.
  (Thanks to Nadim Shaikli)

[20020315]
* some bugs in man/mlterm.1 are fixed. (Thanks to Nadim Shaikli)
* arabic shaping errors are fixed. (Thanks to Nadim Shaikli)
* redrawn region under bidi mode is optimized.

[20020314]
* ml_char_copy() frees necessary memory area if src and dst is equal. fixed.
  (Thanks to Sakamoto Hironori san)
* -J/--rtl, bidi_base_dir_is_rtl option is removed.
  (Thanks to Nadim Shaikli)
* when all lines in scroll region is scrolled out, cursor position is not moved 
  correctly. fixed.

[20020312]
* if USE_FRIBIDI is not defined, compilation fails in ml_bidi() because of shortage of arguments.
  (Thanks to Nanashi san)
* primitive data structure around ml_image* is changed.

[20020310]
* compilation fails in ml_term_manager.c by configure --disable-fribidi because of
  undefined reference to ml_bidi_set_base_dir().
  (Thanks to Nanashi san)
* only limited region is scrolled when output characters is over screen buffer.
* -J,--rtl,bidi_base_direction_rtl option is dynamically changeable.

[20020308]
* COLORTERM_BCE is unset from the beginning.
* arabic characters two of which can turn into one glyph are supported.
* -J,--rtl,bidi_base_direction_rtl option is added.
  This option lets bidi base direction RTL.

[20020306]
* core dump in processing _XROOTPMAP_ID. fixed.
  (Thanks to Nanashi san)
* strange format of man page is fixed.
  (Thanks to Mike Fabian)
* when line is wrapped around, characters at the end of line are swapped. fixed.
  (Thanks to Mike Fabian)

[20020304]
* -q/--extkey use_extended_scroll_shortcut option , which enables scroll shortcutkey
  extension(scrolling by arrow keys, 'j' and 'k'), is added.(disabled by default)