@@ -29,7 +29,8 @@ int
 ml_bidi(
 	u_int16_t *  order ,
 	ml_char_t *  src ,
-	u_int  size
+	u_int  size ,
+	int  cursor_pos
 	)
 {
 	FriBidiChar *  fri_src ;
@@ -101,6 +102,50 @@ ml_bidi(
 
 	fribidi_log2vis( fri_src , size , &fri_type , NULL , fri_order , NULL , NULL) ;
 
+	if( cursor_pos >= 0)
+	{
+		int  pos ;
+
+		for( pos = cursor_pos + 1 ; pos < size ; pos ++)
+		{
+			if( fri_src[pos] != 0x20)
+			{
+				goto  end ;
+			}
+		}
+		
+		if( fribidi_get_type( fri_src[cursor_pos]) &
+			(FRIBIDI_MASK_WEAK | FRIBIDI_MASK_NEUTRAL))
+		{
+			FriBidiCharType  prev_type ;
+
+			prev_type = 0 ;
+			for( pos = cursor_pos ; pos >= 0 ; pos --)
+			{
+				if( ( prev_type = fribidi_get_type( fri_src[pos])) & FRIBIDI_MASK_STRONG)
+				{
+					break ;
+				}
+			}
+
+			if( ! ( prev_type & FRIBIDI_MASK_RTL) && fri_type == FRIBIDI_TYPE_RTL)
+			{
+				fri_src[cursor_pos] = 0x61 ;
+			}
+			else if( ( prev_type & FRIBIDI_MASK_RTL) && fri_type & FRIBIDI_TYPE_LTR)
+			{
+				fri_src[cursor_pos] = 0x0621 ;
+			}
+			else
+			{
+				goto  end ;
+			}
+			
+			fribidi_log2vis( fri_src , size , &fri_type , NULL , fri_order , NULL , NULL) ;
+		}
+	}
+
+end:
 	for( counter = 0 ; counter < size ; counter ++)
 	{
 		order[counter] = fri_order[counter] ;
@@ -155,7 +200,8 @@ int
 ml_bidi(
 	u_int16_t *  order ,
 	ml_char_t *  src ,
-	u_int  size
+	u_int  size ,
+	int  cursor_pos
 	)
 {
 	return  0 ;
