@@ -131,15 +131,13 @@ int  ml_imgline_use_bidi( ml_image_line_t *  line) ;
 
 int  ml_imgline_unuse_bidi( ml_image_line_t *  line) ;
 
-int  ml_imgline_bidi_render( ml_image_line_t *  line) ;
+int  ml_imgline_bidi_render( ml_image_line_t *  line , int  cursor_pos) ;
 
 int  ml_imgline_bidi_visual( ml_image_line_t *  line) ;
 
 int  ml_imgline_bidi_logical( ml_image_line_t *  line) ;
 
 int  ml_bidi_convert_logical_char_index_to_visual( ml_image_line_t *  line , int  char_index) ;
-
-int  ml_bidi_convert_visual_char_index_to_logical( ml_image_line_t *  line , int  char_index) ;
 
 int  ml_imgline_copy_str( ml_image_line_t *  line , ml_char_t *  dst , int  beg , u_int  len) ;
 
